[Fix] Menu should be over the scrollbars

--- a/frontend/task/task.scss
+++ b/frontend/task/task.scss
@@ -263,7 +263,7 @@ body {
     position: absolute;
     right: 0;
     height: 100%;
-    z-index: 5;
+    z-index: 10;
     transform: translate(200px);
     transition: transform ease-in .2s;
     &.is-open {
